# locust-template

./: README.md  pyproject.toml
locust/: locust.conf
